plugins {
    id 'java'
    id 'java-library'
    id 'checkstyle'
    id 'pmd'
    id 'jacoco'
    id 'maven'
}

group 'com.github.hmcts'
version 'DEV-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
    mavenLocal()
    jcenter()
    mavenCentral()
    maven { url 'https://jitpack.io' }

    maven {
        url 'https://repo.spring.io/libs-milestone'
    }
}

// region static code analysis

checkstyle {
    maxWarnings = 0
    toolVersion = '8.10.1'
    // need to set configDir to rootDir otherwise submodule will use submodule/config/checkstyle
    configDir = new File(rootDir, 'config/checkstyle')
}

pmd {
    toolVersion = "6.19.0"
    ignoreFailures = true
    sourceSets = [sourceSets.test]
    reportsDir = file("$project.buildDir/reports/pmd")
    ruleSetFiles = files("config/pmd/ruleset.xml")
}

// endregion

// region test coverage

jacoco {
    toolVersion = "0.8.5"
}

jacocoTestReport {
    reports {
        xml.enabled = true
        csv.enabled = false
    }
}

// endregion

task highLevelDataSetup(type: JavaExec) {
    dependsOn classes
    main = "benefit.HighLevelDataSetupApp"
    classpath +=  sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: 4.12
    testCompile 'pl.pragmatists:JUnitParams:1.1.1'
    testCompile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.3'
    testCompile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.12.3'
    testCompile group: 'commons-io', name: 'commons-io', version: '2.8.0'
    testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '8.6.0'

    testRuntime 'org.glassfish:jakarta.el:3.0.3'
    testCompileOnly 'org.projectlombok:lombok:1.18.18'
    testAnnotationProcessor "org.projectlombok:lombok:1.18.20"
}
